# Poisson-equation

./: .gitignore  CMakeLists.txt  Iterator.cpp  LICENSE  List.cpp  List.h  Matrix.cpp  Matrix.h  Node.cpp  Node.h  README.md  Source.cpp  Sparse.cpp  Sparse.h
Cholesky decomposition/: CholeskyDecomposition.cpp  CholeskyDecomposition.h
PoissonEquation/: PoissonEquation.cpp  PoissonEquation.h
PreconditionedConjugateGradientsMethod/: PCG.cpp  PCG.h
